syntax = "proto3";

package common;

message CommonPacket {
  uint32 handlerId = 1;      
  string userId = 2;         
  string clientVersion = 3;  
  bytes payload = 4;        
  uint32 sequence = 5;       
}

message Ping {
  int64 timestamp = 1;
}