syntax = "proto3";

package user;

message CheckUser {
  string deviceId = 1;
}